objects/Flight_Plan__c.object
<CustomObject>
    <description>Object to create a template for flight plan</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>The Description is a combination of words by which a
Flight Plan is explained.</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>The Name Text is a word or combination of words by
which a Flight Plan is called</description>
        <label>Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Flight Plan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>FP-{0000000000}</displayFormat>
        <label>Flight Plan ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flight Plan</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>